--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
         <input type="radio" name="grupo" value="12" id="12_horas">
         <label for="12_horas">12 horas</label><br><br>
-        <button id="accionar">Boton</button>
+        <button id="accionar">Ver</button>
 
         <select name="medidas" id="medida">
             <option value="">--Escoja una opción--</option>
