--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="index.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Energia solar</title>
+    <title>Power Amigo</title>
 </head>
-<body style="background-color:hsl(120 100% 97.1%);">
-    <div id="medidas">
-        <label for="lang">Consumo de energia por tiempo</label><br><br>
-        <select id="energia" v-model="selected">
-            <option value="seleccion">Seleccione un opción</option>
-            <option value="0">Medida solar</option><!--SOLAR_MEASUREMENT_MINUTE-->
-            <option value="1">Medida nivel de bateria</option><!--BATTERY_LEVEL_MEASUREMENT_MINUTE-->
-            <option value="2">Medida potencia bateria</option><!--BATTERY_POWER_MEASUREMENT_MINUTE-->
-            <option value="3">Medida de Red</option><!--GRID_MEASUREMENT_MINUTE-->
-            <option value="4">medida del generador</option><!--GENERATOR_MEASUREMENT_MINUTE-->
-        </select><br><br>
-    </div>
-    <div id="main" style="width: 4000px;height:600px;"></div>
-    <div id="measurements"></div>
+<body>
+    <div class="container">
+    <div id="main" ></div>
+    <div id="main2"></div>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script type="module" src="grafica.js"></script>
+    <script type="module" src="p.js"></script>
 </body>
 </html>
